courses heading added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <option value="BPharma">BPharma</option>
         </select>
         <input type="text" class="message-by-user" placeholder="Message" />
-        <button type="button" class="btn btn-light devbtn">Send Message</button>
+        <button type="submit" class="btn btn-light devbtn">Send Message</button>
       </div>
     </div>
     <div class="AboutYourCollege">
@@ -199,7 +199,6 @@
         <center>
           <p>© Copyright Admission oPen. All Rights Reserved</p>
         </center>
-
       </div>
     </footer>
     <script src="./items.js"></script>
